snapshots/syntax/library/functions/math/abs/abs_with_binary_operators.snap
---
source: src/syntax/library/functions/math/abs.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: result
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: Abs
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: BinaryExpression
                              children:
                                - kind: BinaryExpression
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: a
                                    - kind: Whitespace
                                      text: " "
                                    - kind: AdditionOperator
                                      text: +
                                    - kind: Whitespace
                                      text: " "
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: b
                                - kind: Whitespace
                                  text: " "
                                - kind: SubtractionOperator
                                  text: "-"
                                - kind: Whitespace
                                  text: " "
                                - kind: BinaryExpression
                                  children:
                                    - kind: BinaryExpression
                                      children:
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: Identifier
                                              text: c
                                        - kind: Whitespace
                                          text: " "
                                        - kind: MultiplicationOperator
                                          text: "*"
                                        - kind: Whitespace
                                          text: " "
                                        - kind: IdentifierExpression
                                          children:
                                            - kind: Identifier
                                              text: d
                                    - kind: Whitespace
                                      text: " "
                                    - kind: DivisionOperator
                                      text: /
                                    - kind: Whitespace
                                      text: " "
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: e
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
